<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:id="@+id/backRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle_white"
            android:padding="20sp"
            android:src="@drawable/trash" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_delete"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnYoq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:background="@drawable/circle_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/yo_q"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnHa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:background="@drawable/circle_white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ha"
                android:textColor="@color/blue"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>