<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.AddFragment">

    <LinearLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20sp"
            android:src="@drawable/button1" />

        <TextView
            android:id="@+id/toptext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/msg"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/placeholder_image1"
        app:layout_constraintBottom_toTopOf="@id/hint"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hint"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAdd" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edt_background"
        android:hint="@string/road_rule_name"
        android:paddingStart="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edt_background"
        android:gravity="top"
        android:hint="@string/road_rule_description"
        android:padding="15sp"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_background"
        android:entries="@array/time"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintWidth_percent="0.35">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>