<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="FragmentAbout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="20sp"
            android:text="@string/about_creator"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/links_to_my_social_websites"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_instagram" />

        <TextView
            android:id="@+id/insta_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_telegram" />

        <TextView
            android:id="@+id/tg_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_linkedin" />

        <TextView
            android:id="@+id/linkedin_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_github" />

        <TextView
            android:id="@+id/github_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/this_app_was_created_by_abdusamid_muhammadov"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

</LinearLayout>