<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_bg"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/rectangle2"
    android:padding="10dp">

    <ImageView
        android:id="@+id/rv_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rv_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/rv_text"
        android:layout_width="200sp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/rv_image"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/rv_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_image" />

    <ImageView
        android:id="@+id/rv_like"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/unlike"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete">

        <ImageView
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/pen" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/edit"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>